# KeyDistroCenter

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: __init__.py  auth.py  messages.py  users.py
app/core/: config.py  crypto.py  security.py
app/models/: db.py
app/schemas/: auth.py  message.py  users.py
app/services/: auth_service.py  auth_services.py  message_service.py  user_service.py
app/utils/: __init__.py  migrate_private_keys.py  scheduler.py
static/: style-kdc.css  style-login.css  style-profile.css
templates/: index.html  login.html  messages.html  profile.html  register.html  send.html
